Update README.md
Tomcat 6 + paramètres espaces mémoires JVM