@@ -100,6 +100,7 @@ Les admin et super-manager peuvent configurer certains éléments de l'applicati
 * Java (JDK - JAVA SE 6 OK):  http://www.oracle.com/technetwork/java/javase/downloads/index.html
 * Maven (dernière version 3.0.x ok) : http://maven.apache.org/download.cgi
 * Postgresql (8 ou 9 OK) : le mieux est de l'installer via le système de paquets de votre linux.
+* Tomcat (Tomcat 6 OK)
 
 ### PostgreSQL
 * pg_hba.conf : ajout de 
@@ -122,6 +123,11 @@ grant ALL ON DATABASE esupdematec to esupdematec;
 mvn jetty:run
 ```
 Puis firefox http://localhost:8080/EsupDematEC (compte admin/admin)
+
+Pensez à paramétrer les espaces mémoire JVM : 
+```
+export JAVA_OPTS="-Xms1024m -Xmx1024m -XX:MaxPermSize=256m"
+```
 
 ### Obtention du war pour déploiement sur tomcat ou autre :
 ```
